--- a/styles/main.css
+++ b/styles/main.css
@@ -35,11 +35,27 @@ nav {
     transition: 0.5s;
     font-size: 30px;
 }
+.nav ul li.active a .icon {
+    font-size: 20px;
+    transform: translateY(-6px);
+}
+.nav ul li a .text {
+    font-size: 12px;
+    position: absolute;
+    color: #ffffff;
+    bottom: 20px;
+    font-weight: 400;
+    transition: 0.25s;
+    transform: scale(0);
+    text-transform: uppercase;
+}
+.nav ul li.active a .text {
+    transform: scale(1)
+}
 
 * {
     padding: 0;
     margin: 0;
-    overflow: scroll;
 }
 
 h1 {
@@ -64,4 +80,6 @@ body{
     background: url("../IMG/Captura.PNG");
     background-size: cover;
     background-position: center;
+    font-family: 'Ubuntu', sans-serif;
+    box-sizing: border-box;
 }
