--- a/styles/photos.css
+++ b/styles/photos.css
@@ -11,7 +11,13 @@ body {
 }
 h1{
     text-align: center;
-
+}
+p {
+    text-align: center;
+    vertical-align: center;
+    padding-top: 300px;
+    font-size: 30px;
+    font-weight: bold;
 }
 
 
